--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9991,8 +9991,13 @@ h6,
 .img-display img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Memastikan gambar memenuhi card tanpa distorsi */
+    object-fit: cover;
+    /*Memastikangambarmemenuhicardtanpadistorsi*/
     transition: transform 0.5s;
+    -webkit-transition: transform 0.5s;
+    -moz-transition: transform 0.5s;
+    -ms-transition: transform 0.5s;
+    -o-transition: transform 0.5s;
 }
 
 .destination-item img {
