--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -268,4 +268,59 @@ a {
     .modal-backdrop {
         display: none !important;
     }
+
+    .body-login {
+        background-color: #20c997;
+    }
+
+    .btn-custom {
+        padding: 1rem;
+        background-color: #0bb884;
+        border: none;
+        transition: background-color 0.3s ease;
+    }
+
+    .btn-custom:hover {
+        background-color: #28a745; /* Background color on hover */
+    }
+
+    .custom-card {
+        background-color: #d4f7e5;
+    }
+
+    .wave {
+        animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
+        animation-duration: 2.5s; /* Change to speed up or slow down */
+        animation-iteration-count: infinite; /* Never stop waving :) */
+        transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+        display: inline-block;
+        font-size: 2rem;
+    }
+
+    @keyframes wave-animation {
+        0% {
+            transform: rotate(0deg);
+        }
+        10% {
+            transform: rotate(14deg);
+        } /* The following five values can be played with to make the waving more or less extreme */
+        20% {
+            transform: rotate(-8deg);
+        }
+        30% {
+            transform: rotate(14deg);
+        }
+        40% {
+            transform: rotate(-4deg);
+        }
+        50% {
+            transform: rotate(10deg);
+        }
+        60% {
+            transform: rotate(0deg);
+        } /* Reset for the last half to pause */
+        100% {
+            transform: rotate(0deg);
+        }
+    }
 }
