--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10294,18 +10294,16 @@ h6,
     color: white;
     border: none;
     border-radius: 5px;
-    padding: 5px 15px;
     display: flex;
     align-items: center;
-    gap: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
+    gap: 12px;
+    padding: 10px 20px;
 }
 
 .btn-custom:hover {
-    background-color: var(--primary);
+    background-color: transparent;
+    color: var(--primary);
+    border: 2px solid var(--primary);
 }
 
 /* Center the Button */
@@ -10322,7 +10320,6 @@ h6,
     padding: 10px 20px;
     /*Adjustpaddingforbuttonsize*/
     font-size: 16px;
-    font-weight: bold;
     color: white;
     /*Textcolor*/
     text-decoration: none;
@@ -10370,4 +10367,9 @@ h6,
         opacity: 1;
         transform: translateY(0); /* End in the original position */
     }
+}
+
+/* Contact margin container*/
+.con-ct {
+    margin-top: 7em;
 }
