--- a/public/css/book.css
+++ b/public/css/book.css
@@ -145,7 +145,7 @@ body {
     border: 1px solid #dadce0;
     border-radius: 0;
     outline: none;
-    padding: 2px;
+    padding: 12px;
     background: none;
     z-index: 1;
     box-shadow: none;
@@ -182,4 +182,16 @@ body {
 .form-control:focus {
     border: 1.5px solid var(--primary);
     box-shadow: none;
+}
+
+#imagePreview img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 8px;
+    object-fit: cover;
+}
+
+textarea {
+    height: 150px; /* Tinggi awal */
+    width: 100%; /* Lebar */
 }
