--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,27 @@
     --white-color: #f7f6fb; /* Background and header color */
     --normal-font-size: 1rem; /* Base font size */
     --z-fixed: 100; /* Z-index for fixed elements */
+    --blue: #007bff;
+    --indigo: #6610f2;
+    --purple: #6f42c1;
+    --pink: #e83e8c;
+    --red: #dc3545;
+    --orange: #fd7e14;
+    --yellow: #ffc107;
+    --green: #28a745;
+    --teal: #20c997;
+    --cyan: #17a2b8;
+    --white: #fff;
+    --gray: #6c757d;
+    --gray-dark: #343a40;
+    --primary: #7ab730;
+    --secondary: #f4faec;
+    --success: #28a745;
+    --info: #17a2b8;
+    --warning: #ffc107;
+    --danger: #dc3545;
+    --light: #ffffff;
+    --dark: #212121;
 }
 
 *,
@@ -292,5 +313,20 @@ a {
         100% {
             transform: rotate(0deg);
         }
+    }
+
+    .dataTables_lenght {
+        margin-bottom: 2rem;
+    }
+    .dataTables_filter {
+        margin-bottom: 2rem;
+    }
+
+    .dataTables_info {
+        margin-top: 2rem;
+    }
+
+    .dataTables_paginate {
+        margin-top: 2rem;
     }
 }
