--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,3 @@
-@import "bootstrap/scss/bootstrap";
-
 :root {
     --blue: #007bff;
     --indigo: #6610f2;
@@ -10372,4 +10370,10 @@ h6,
 /* Contact margin container*/
 .con-ct {
     margin-top: 7em;
+}
+
+/* Footer Prodi*/
+.logo-prodi {
+    width: auto;
+    height: 40px;
 }
